--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,105 @@ body {
       var(--background-end-rgb)
     )
     var(--background-start-rgb);
+    overflow: hidden;
 }
 
+/*
 .main {
-  margin-top: 2rem;
+  overflow: auto;
+  height: 100vh;
+}
+*/
+
+@media (min-width: 768px) {
+  .main {
+    overflow: hidden;
+    height: 100%;
+  }
+}
+
+.chat-main {
+  padding-top: 1rem;
+  overflow: hidden;
+  height: 100vh;
+  display: none;
+}
+
+.chat-main:hover {
+  overflow-y: auto;
+}
+
+
+@media (min-width: 768px) {
+  .chat-main {
+    display: block;
+  }
+}
+
+.chat-name {
+  font-size: 90%;
+}
+
+.chat-since {
+  font-size: 90%;
+  font-weight: 200;
+}
+
+.stars {
+  margin: 0.5rem;
+  height: 70px;
+  min-width: 50px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 1px;
+}
+
+.user-header {
+  margin: 0.5rem;
+}
+
+.logo-container {
+  width: 50px;
+  height: 50px;  
+}
+
+.img-thumbnail-container {
+  width: 50px;
+  height: 50px;  
+}
+.img-thumbnail-avatar {
+  object-fit: cover;
+  border-radius: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.user-body-message {
+  padding: 0.5rem;
+  font-weight: 200;
+  font-size: 90%;
+}
+
+.chat-box {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;  
+}
+.chat-box-item {
+  border-radius: 15px;
+  background-color: var(--background-container-rgb);
+  color: var(--border-color);  
+  margin: 0.5rem;
+  height: 100%;
+}
+
+.video-main {
+  overflow: hidden;
+  height: 100vh;
+}
+
+.video-main:hover {
+  overflow-y: auto;
 }
 
 .video-container {
@@ -42,11 +137,16 @@ body {
 .input-container {
   border-radius: 15px;
   background-color: var(--background-container-rgb);
+  color: var(--border-color);
   width: 95%;
   height: 90px;  
   display: flex;
   justify-content: center;
   align-items: center;  
+}
+
+.input::placeholder {
+  color: var(--border-color);
 }
 
 .input {
@@ -61,20 +161,49 @@ body {
   border-width: 0.5px;
 }
 
-.course-list {
-  list-style: none;
-}
-
-/*modify sidenav*/
-.btn-close {
-  align-self: flex-start !important;
-}
-
-.offcanvas-body, .offcanvas-header {
-  background-color: #252738;
+.offcanvas-body, .offcanvas-header, .offcanvas-body {
+  background-color: var(--background-container-rgb);
   padding-left: 0;
-  padding-right: 0;
-  padding-top: 23px;
+  padding-right: 0;    
+}
+
+.offcanvas-body {
+  padding: 0;
+}
+
+.recursos-main {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .recursos-main {
+    display: block;
+  }
+}
+
+/*Mobile Tabs*/
+.tabs-main {
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .tabs-main {
+    display: none;
+  }
+}
+
+.marker-main {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .marker-main {
+    display: block;
+  }
+}
+.marker-list {
+  background-color: var(--background-container-rgb);
+  /*max-width: 42px;*/
 }
 
 .navbar {
@@ -101,4 +230,29 @@ body {
 
 .offcanvas-body-card {
   padding-top: 20px;
+}
+
+
+/*Scroll bar*/
+::-webkit-scrollbar {
+  width: 15px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {    
+  background-color: transparent;
+  /*
+  box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+  */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
