--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 :root {
   --foreground-rgb: #f5f5fa;
-  --background-start-rgb: #121F3D;
-  --background-end-rgb: #121F3D;
-  --background-container-rgb: #252738;
+  --background-start-rgb: #121F3F;
+  --background-end-rgb: #121F3F;
+  --background-container-rgb: #203354;
+  --foreinactive-color: #203354;
   --background-input: #0a0b1b;
   --border-color: #b3b6e6;
   --foreactive-color: #4285f4;
+  --foreinactivetab-color: #637a9d;
 }
 
 body {
@@ -44,6 +46,10 @@ body {
   color: var(--foreground-rgb);
 }
 
+.navbar-nav .nav-link:hover {
+  color: var(--foreground-rgb);
+}
+
 .nav-link {
   color: var(--border-color);
 }
@@ -58,6 +64,35 @@ body {
 
 .navbar-toggler-icon {
   color: var(--foreground-rgb);
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  color: var(--foreactive-color);
+  background-color: transparent;
+  border-color: var(--foreactive-color);
+  border-top-style: none;
+  border-right-style: none;
+  border-bottom-style: solid;
+  border-left-style: none;
+}
+
+.nav-tabs {
+  border-bottom-color: var(--foreinactive-color);
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link {
+  color: var(--foreinactivetab-color);  
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link:hover {
+  border-style: none;
+  color: var(--foreground-rgb);
+}
+
+@media (min-width: 992px) {
+  .navbar-nav.me-auto {
+    margin-right: unset!important;
+  }
 }
 
 .badge {
@@ -147,12 +182,25 @@ body {
   height: 100%;
 }
 
+/*Search control*/
+.form-control {
+  background-color: var(--background-input);
+  font-size: 90%;
+  color: var(--foreground-rgb);
+  border-color: var(--border-color);
+}
+.input-group-text {
+  background: transparent;
+  color: var(--foreground-rgb);
+}
+
+/*Message input*/
 .input-container {
   border-radius: 15px;
   background-color: var(--background-container-rgb);
   color: var(--border-color);
   width: 95%;
-  height: 90px;  
+  height: 75px;  
   display: flex;
   justify-content: center;
   align-items: center;  
@@ -201,6 +249,12 @@ body {
   padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
 
+/*Recursos*/
+.recursos-container > .seccion {
+  border-bottom-color: var(--foreinactive-color);
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+}
 .responsive-iframe {
   position: absolute;
   top: 0;
@@ -256,15 +310,19 @@ body {
 /* Stepper */
 .body-stepper {
   padding-top: 1.6rem;
-  padding-left: 1rem;
-  /*max-width: 3rem;*/
+  padding-left: 0.5rem;
+  max-width: 2.5rem;
+  height: 85vh;  
+  overflow-y: auto;
 }
 
 .step {
   position: relative;
   min-height: 1em;
   color: var(--border-color);
+  cursor: pointer;
 }
+
 .step + .step {
   margin-top: 1.5em
 }
@@ -366,4 +424,28 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #a8bbbf;
+}
+
+.body-stepper::-webkit-scrollbar {
+  width: 15px;
+  border-radius: 10px;
+  display: none;
+}
+
+.body-stepper::-webkit-scrollbar-track {    
+  background-color: transparent;
+  /*
+  box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+  */
+}
+
+.body-stepper::-webkit-scrollbar-thumb {
+  background-color: #051216;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+.body-stepper::-webkit-scrollbar-thumb:hover {
+  background-color: #0f181a;
 }
